--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,20 +1,21 @@
 <div class="container">
 
-	<h1>Blogs</h1>
+	<h1>{{ title }}</h1>
 	
-	<button class="btn btn-primary">Add Blog</button>
+	<button class="btn btn-primary" ng-click="frmToggle()">Add Blog</button>
 	<br>
-	<form class="form-horizontal" id="blogForm">
+
+	<form class="form-horizontal" id="blogForm" ng-submit="pushData(frm)" hidden>
 		<div class="form-group">
 			<label for="title" class="col-sm-2 control-label">Title</label>
 			<div class="col-sm-10">
-				<input type="text" class="form-control">
+				<input type="text" ng-model="frm.title" class="form-control">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="description" class="col-sm-2 control-label">Description</label>
 			<div class="col-sm-10">
-				<textarea class="form-control"></textarea>
+				<textarea class="form-control" ng-model="frm.description"></textarea>
 			</div>
 		</div>
 		<div class="form-group">
@@ -23,6 +24,7 @@
 			</div>
 		</div>
 	</form>
+
 	<br>
 	<input type="search" ng-model="query" placeholder="Search Blog" class="form-control">
 	<br>
@@ -30,8 +32,8 @@
 	 	<tr>
 	 		<th>Title</th><th>Description</th><th>Added</th>
 	 	</tr>
-	 	<tr>
-	 		<td>Demo Title</td><td>Demo Description</td><td>Demo Date</td>
+	 	<tr ng-repeat="blog in blogs | filter: query">
+	 		<td>{{ blog.title }}</td><td>{{ blog.description }}</td><td>{{ blog.added }}</td>
 	 	</tr>
 	</table>
 
